src/test/ui/rfc1598-generic-associated-types/construct_with_other_type.stderr
warning: the feature `generic_associated_types` is incomplete and may cause the compiler to crash
  --> $DIR/construct_with_other_type.rs:11:12
   |
LL | #![feature(generic_associated_types)]
   |            ^^^^^^^^^^^^^^^^^^^^^^^^

error[E0110]: lifetime parameters are not allowed on this type
  --> $DIR/construct_with_other_type.rs:27:46
   |
LL |     type Baa<'a>: Deref<Target = <Self::Quux<'a> as Foo>::Bar<'a, 'static>>;
   |                                              ^^ lifetime parameter not allowed

error[E0110]: lifetime parameters are not allowed on this type
  --> $DIR/construct_with_other_type.rs:27:63
   |
LL |     type Baa<'a>: Deref<Target = <Self::Quux<'a> as Foo>::Bar<'a, 'static>>;
   |                                                               ^^ lifetime parameter not allowed

error[E0110]: lifetime parameters are not allowed on this type
  --> $DIR/construct_with_other_type.rs:35:40
   |
LL |     type Baa<'a> = &'a <T as Foo>::Bar<'a, 'static>;
   |                                        ^^ lifetime parameter not allowed

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0110`.
